using database with jpa and javax

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=forum
 spring.datasource.username=sa
 spring.datasource.password=sa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
