--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+forum.app.jwtSecret=jwtsecret
+forum.app.jwtExpirationMs=3600000
