--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 forum.app.jwtSecret=jwtsecret
-forum.app.jwtExpirationMs=3600000
+forum.app.jwtExpirationMs=86400000
